--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,4 +4,20 @@ body
     font-family: "Arial";
     background-color: black;
     color: aqua;
+    font-size: 30px;
+    padding: 0px;
+    margin: 0px;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid wheat;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 30px;
 }
