segundo parrafo y cambio de font

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body 
 {
     text-align: center;
-    font-family: "Arial";
+    font-family: "Courier";
     background-color: black;
     color: aqua;
     font-size: 30px;
