--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body 
 {
     text-align: center;
-    font-family: "Courier";
+    font-family: "helvetica";
     background-color: black;
     color: white;
     font-size: 30px;
