modificacion color body y cabecera

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body
     text-align: center;
     font-family: "helvetica";
     background-color: black;
-    color: white;
+    color: red;
     font-size: 30px;
     padding: 0px;
     margin: 0px;
