--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,13 +11,19 @@ body
 
 #cabecera
 {
-    background: rgb(223, 100, 100);
+    background: white;
     box-shadow: 0px 5px 30px 0px wheat;
     text-align: center;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
-    color: aqua;
+    padding: 0.5em 0 0.5em 3em;
+    color: rgb(12, 49, 49);
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -42,5 +48,6 @@ body
 
 #post
 {
+
     padding: 1em;
 }
